[gd_scene load_steps=2 format=3 uid="uid://ul6qqebfktab"]

[ext_resource type="Script" uid="uid://bveat4tcpmcn4" path="res://tts_test.gd" id="1_script"]

[node name="TTSTest" type="Node"]
script = ExtResource("1_script")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Kokoro TTS Test"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Hello! The text chunking method significantly reduces perceived latency by processing and delivering the first chunk of text as soon as it becomes available. Let's consider a hypothetical system where the language model generates responses at a certain rate. If we imagine a scenario where the model produces a response of N words at a rate of R words per second, waiting for the complete response would introduce a delay of N/R seconds before any audio is produced. With text chunking, the system can start processing the first M words as soon as they are ready (after M/R seconds), while the remaining words continue to be generated. This means the user hears the initial part of the response in just M/R seconds, while the rest streams in naturally."
placeholder_text = "Enter text to speak..."

[node name="SpeakButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Speak"

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Initializing..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="SpeakerContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="UI/VBoxContainer/SpeakerContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Speaker: 0"

[node name="SpeakerSlider" type="HSlider" parent="UI/VBoxContainer/SpeakerContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0

[node name="SpeedContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="UI/VBoxContainer/SpeedContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Speed: 1.0"

[node name="SpeedSlider" type="HSlider" parent="UI/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0
